# learning-microservice

./: .env.example  .gitignore  .graphify_detect.json  .graphify_python  AGENT.md  docker-compose.yml  pyproject.toml
config/: otel-collector.yaml  prometheus.yml  promtail.yaml
graphify-out/: .graphify_ast.json  .graphify_cached.json  .graphify_detect.json  .graphify_python  .graphify_semantic.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
proto/: critic.proto  planner.proto  report.proto  search.proto  summarizer.proto
services/api-gateway/: .env.example  Dockerfile  pyproject.toml
services/api-gateway/app/: main.py
services/api-gateway/app/api/: research.py
services/api-gateway/app/core/: config.py  kafka.py  redis_client.py  telemetry.py
services/api-gateway/app/schemas/: research.py
services/critic-agent/: .env.example  Dockerfile  pyproject.toml
services/orchestrator/: .env.example  Dockerfile  alembic.ini  pyproject.toml
services/orchestrator/alembic/: env.py
services/orchestrator/alembic/versions/: b36e20ff57e2_create_research_tasks.py
services/orchestrator/app/: grpc_generated_path.py  main.py
services/orchestrator/app/api/: research.py
services/orchestrator/app/core/: config.py  database.py  kafka.py
services/orchestrator/app/graph/: nodes.py  state.py  workflow.py
services/orchestrator/app/grpc_clients/: __init__.py  critic.py  planner.py  report.py  search.py  summarizer.py
services/orchestrator/app/models/: research.py
services/orchestrator/app/schemas/: research.py
services/orchestrator/app/services/: research.py
services/planner-agent/: .env.example  Dockerfile  pyproject.toml
services/report-service/: .env.example  Dockerfile  pyproject.toml
services/report-service/app/: main.py
services/report-service/app/core/: config.py
services/report-service/app/services/: report.py
services/search-agent/: .env.example  Dockerfile  pyproject.toml
services/summarizer-agent/: .env.example  Dockerfile  pyproject.toml
shared/: kafka_events.py  logging.py  pyproject.toml
system-architecture/: phase-2-architecture.md
tutorial/: Home.md
tutorial/.obsidian/: community-plugins.json  graph.json  workspace.json
tutorial/.smart-env/: smart_env.json
tutorial/alembic/: Alembic Overview.md  Async Setup.md  Codex.md  Common Commands.md
tutorial/concepts/: FastAPI Background Tasks.md  Grafana.md  Kafka and Redpanda.md  LangGraph Concepts.md  OpenTelemetry.md  Prometheus.md  Protocol Buffers.md  Redis.md  SQLAlchemy Async.md  Server-Sent Events.md  gRPC aio Servers.md  gRPC.md
tutorial/debugging/: Docker Desktop Engine Missing.md  uv Cache Access Denied.md
tutorial/observability concepts/: 00 Observability Series Index.md  01 Why Observability Matters.md  02 Metrics Logs and Traces.md  03 Prometheus Fundamentals.md  04 Prometheus in This Project.md  05 Grafana Fundamentals.md  06 Grafana in This Project.md  07 Loki and Structured Logging.md  08 Promtail Log Shipping.md  09 Loki and Promtail in This Project.md  10 OpenTelemetry Fundamentals.md  (+4 more)
(+134 files in other folders)
