[project]
name = "api-gateway"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.6.0",
    "aiokafka>=0.11.0",
    "redis>=5.0.0",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }
