[project]
name = "api-gateway"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.6.0",
    "aiokafka>=0.11.0",
    "redis>=5.0.0",
    "shared",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.40b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
]

[tool.uv.sources]
shared = { workspace = true }
