[project]
name = "report-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "langchain>=0.3.0",
    "langchain-openrouter>=0.2.1",
    "pydantic-settings>=2.6.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-grpc>=0.40b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
